# safe

./: 404.html  index.html  pyproject.toml  sitemap.xml
en/: index.html
en/features/: index.html
ru/: index.html
ru/features/: index.html
search/: search_index.json
