[project]
name = "safe-returns"
version = "0.1.0"
description = "Safe returns function decorator"
readme = "README.md"
authors = [{ name = "Fedor Ratschew", email = "feodor.ra@me.com" }]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/safe"]
