[project]
name = "safe-returns"
version = "0.1.0"
description = "Safe returns function decorator"
readme = "README.md"
authors = [{ name = "Fedor Ratschew", email = "feodor.ra@me.com" }]
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = ["pyright[nodejs]==1.1.389", "ruff==0.8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/safe"]

[tool.ruff]
target-version = "py311"
line-length = 100
fix = true

[tool.ruff.lint]
ignore = [
    "AIR",
    "CPY",
    'D100',
    "D203",
    "D213",
    "DJ",
    "FLY",
    "NPY",
    "PD",
    "TCH",
    "YTT",
]
preview = true
select = ["ALL"]
exclude = [".venv/*", "pyproject.toml"]

[tool.ruff.lint.per-file-ignores]
"**/{typing}.py" = ["A005"]

[tool.ruff.format]
quote-style = "double"
preview = true

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
exclude = [".venv/*"]
